5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/2360/executions/1643_1053.log
== TEST (2019-04-10 18:56:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
frase = input("digite a frase: ")
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:25:05) 
-- CODE:
frase = input ("digite a frase: ")
if (cervo):
	mensagem = "cervo eh patrono do harry potter"
else:
	mensagem = "nao eh patrono do harry potter"

print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if (cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:25:59) 
-- CODE:
frase = input ("digite a frase: ")
if (= cervo):
	mensagem = "cervo eh patrono do harry potter"
else:
	mensagem = "nao eh patrono do harry potter"

print(mensagem)
-- ERROR:
File "XXXX", line 2
    if (= cervo):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:26:48) 
-- CODE:
frase = input ("digite a frase: ")
if (cervo = mensagem):
	mensagem = "cervo eh patrono do harry potter"
else:
	mensagem = "nao eh patrono do harry potter"

print(mensagem)
-- ERROR:
File "XXXX", line 2
    if (cervo = mensagem):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:26:48) 
-- CODE:
frase = input ("digite a frase: ")
if (cervo = mensagem):
	mensagem = "cervo eh patrono do harry potter"
else:
	mensagem = "nao eh patrono do harry potter"

print(mensagem)
-- ERROR:
File "XXXX", line 2
    if (cervo = mensagem):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:35:25) 
-- CODE:
frase = input ("digite a frase: ")
if (frase == "cervo"):
	mensagem = "cervo eh patrono do harry potter"
else:
	mensagem = frase+ "nao eh patrono do harry potter"

print(mensagem)
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:35:36) 
-- CODE:
frase = input ("digite a frase: ")
if (frase == "cervo"):
	mensagem = "cervo eh patrono do harry potter"
else:
	mensagem = frase+ "nao eh patrono do harry potter"

print(mensagem)
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:36:01) 
-- CODE:
frase = input ("digite a frase: ")
if (frase == "cervo"):
	mensagem = "cervo eh patrono do harry potter"
else:
	mensagem = frase + "nao eh patrono do harry potter"

print(mensagem)
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:36:43) 
-- CODE:
frase = input ("digite a frase: ")
if (frase == "cervo"):
	mensagem = "cervo eh patrono do harry potter"
else:
	mensagem = frase + "nao eh patrono do harry potter"

print(mensagem)
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:36:59) 
-- CODE:
frase = input ("digite a frase: ")
if (frase == "cervo"):
	mensagem = "cervo eh patrono do harry potter"
else:
	mensagem = "nao eh patrono do harry potter"

print(mensagem)
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 19:37:11) 
-- CODE:
frase = input ("digite a frase: ")
if (frase == "cervo"):
	mensagem = "cervo eh patrono do harry potter"
else:
	mensagem = "nao eh patrono do harry potter"

print(mensagem)
-- EXECUTION TIME:
0.161039
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nao eh patrono do harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:37:35) 
-- CODE:
frase = input ("digite a frase: ")
if (frase == "cervo"):
	mensagem = "cervo eh patrono do harry potter"
else:
	mensagem = frase + " nao eh patrono do harry potter"

print(mensagem)
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 19:37:45) 
-- CODE:
frase = input ("digite a frase: ")
if (frase == "cervo"):
	mensagem = "cervo eh patrono do harry potter"
else:
	mensagem = frase + " nao eh patrono do harry potter"

print(mensagem)
-- EXECUTION TIME:
0.105575
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:37:52) 
-- CODE:
frase = input ("digite a frase: ")
if (frase == "cervo"):
	mensagem = "cervo eh patrono do harry potter"
else:
	mensagem = frase + " nao eh patrono do harry potter "

print(mensagem)
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:38:25) 
-- CODE:
frase = input ("digite a frase: ")
if (frase == "cervo"):
	mensagem = "cervo eh patrono do harry potter"
else:
	mensagem =" nao eh patrono do harry potter "

print(mensagem)
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:39:02) 
-- CODE:
frase = input ("digite a frase: ")
if (frase == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem =" nao eh patrono do Harry Potter "

print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:39:10) 
-- CODE:
frase = input ("digite a frase: ")
if (frase == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem =" nao eh patrono do Harry Potter "

print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 19:39:15) 
-- CODE:
frase = input ("digite a frase: ")
if (frase == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem =" nao eh patrono do Harry Potter "

print(mensagem)
-- EXECUTION TIME:
0.204335
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 19:39:25) 
-- CODE:
frase = input ("digite a frase: ")
if (frase == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem =frase + " nao eh patrono do Harry Potter "

print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 19:39:30) 
-- CODE:
frase = input ("digite a frase: ")
if (frase == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem =frase + " nao eh patrono do Harry Potter "

print(mensagem)
-- EXECUTION TIME:
0.15527
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
